k8s/demo1-application.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo1-deployment
spec:
  selector:
    matchLabels:
      app: demo1
  replicas: 1
  template:
    metadata:
      labels:
        app: demo1
    spec:
      containers:
        - name: demo1
          image: devraghavm/spring-boot-opentracing-demo-1:0.0.1-SNAPSHOT
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: demo1-svc
spec:
  selector:
    app: demo1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
