k8s/demo2-application.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo2-deployment
spec:
  selector:
    matchLabels:
      app: demo2
  replicas: 1
  template:
    metadata:
      labels:
        app: demo2
    spec:
      containers:
        - name: demo2
          image: devraghavm/spring-boot-opentracing-demo-2:0.0.1-SNAPSHOT
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: demo2-svc
spec:
  selector:
    app: demo2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
